version 1.3.0
- fix panel data bugs: observation strings were broken for
  frequency greater than 99, and the "panel" command did not
  obey the "cross-section" option (thanks to Mihai Nica for
  the report)
- add facility for nesting loops and fix some loop bugs
- fix some bugs in LaTeX equation display
- add support for Latin 2 characters in gnuplot graphs
- add support for compacting daily data to weekly or monthly
- add support for daily data with a 6-day week
- fix for SUR systems with differing numbers of regressors
  across equations (thanks to Jack Lucchetti)
- add stack() function to genr command: creates a stacked
  series from a comma-separated list of series, or a
  range of series as in stack(x1..xn)
- add a genr "special": genr markers = ... can be used to
  manipulate the observation marker strings -- details in
  panel.pdf
- add "vif" command to calculate Variance Inflation Factors
  for independent variables in a regression; also available
  in the model window under Tests/collinearity
- switch to St Louis Fed database as gretl "sample" database
  (the BCIH database is getting too out-of-date)
- add the Anscombe Quartet to the gretl data files
- on Windows, make EMF graphs respect the user's choice of
  plotting colors (required a modification to gnuplot)
- various minor gui fixes and enhancements
- update Windows version to gtk 2.4.9
- start adding user-defined functions

7/23/2004 version 1.2.9
- fixes for LaTeX printing of autoregressive models
- correct Spanish help strings
- fix font problem for some objects in session window
- fix for exporting time-series data to R version 1.9
- add option to export data to PcGive .dat format (thanks to
  Michal Kurcewicz)
- enable TRAMO analysis of annual time-series data
- Windows version: ensure user directory gets created!  This
  was broken in gretl 1.2.6 and 1.2.7, which could produce
  strange-seeming problems.
- hccm command: ensure that the F-stat shown for the model